(fix) footer overflow in mobile view

--- a/styles/components/footer.module.scss
+++ b/styles/components/footer.module.scss
@@ -5,7 +5,7 @@
     @include wrapper-gutters();
 
     & > div {
-        grid-column: 2;
+        grid-column: 2 / span 2;
     }
 
     a {
